Fix quill tooltip overflow

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -134,3 +134,8 @@
   color: #fff;
   background-color: #3454f6;
 }
+
+.ql-tooltip.ql-editing {
+  transform: translateX(-50%) !important;
+  left: 50% !important;
+}
